[gd_scene format=4 uid="uid://dttf0u7a30xsm"]

[ext_resource type="Script" uid="uid://dy2qf66hypdis" path="res://levels/level_1.gd" id="1_3sk1a"]
[ext_resource type="PackedScene" uid="uid://c0qjf0dlqv16d" path="res://scenes/player/player.tscn" id="1_vn7o3"]
[ext_resource type="PackedScene" uid="uid://b8k380wmj0r1b" path="res://scenes/tile_map.tscn" id="2_jirdo"]
[ext_resource type="Texture2D" uid="uid://be1pfgvml0w1s" path="res://Seasonal Tilesets/Seasonal Tilesets/1 - Grassland/Background parts/5 - Sky_color.png" id="3_gwceb"]
[ext_resource type="Script" uid="uid://sf3drg8arlst" path="res://levels/parallax_background.gd" id="3_l53as"]
[ext_resource type="Texture2D" uid="uid://cjv5m1u3gq12o" path="res://Seasonal Tilesets/Seasonal Tilesets/1 - Grassland/Background parts/4 - Cloud_cover_2.png" id="4_l53as"]
[ext_resource type="Texture2D" uid="uid://bldbmtj8n7l4s" path="res://Seasonal Tilesets/Seasonal Tilesets/1 - Grassland/Background parts/3 - Cloud_cover_1.png" id="5_3sk1a"]
[ext_resource type="Texture2D" uid="uid://cw7b6fvhl43t0" path="res://Seasonal Tilesets/Seasonal Tilesets/1 - Grassland/Background parts/2 - Hills.png" id="6_08mmt"]
[ext_resource type="Texture2D" uid="uid://caxvlikndaolu" path="res://Seasonal Tilesets/Seasonal Tilesets/1 - Grassland/Background parts/1 - Foreground_scenery.png" id="7_5ot28"]

[node name="Level1" type="Node2D" unique_id=61020778]
script = ExtResource("1_3sk1a")

[node name="Node2D" type="Node2D" parent="." unique_id=1191682755]

[node name="TileMap" parent="." unique_id=742965699 instance=ExtResource("2_jirdo")]
position = Vector2(-1, 96)
tile_map_data = PackedByteArray("AABVAA0AAAAHAAQAAABVAAwAAAAFAAUAAABVAAsAAAAFAAUAAABVAAoAAAAFAAIAAABVAAkAAAAFAAIAAABVAAgAAAAFAAIAAABVAAcAAAAHAAMAAABUAA0AAAAGAAQAAABUAAwAAAAEAAUAAABUAAsAAAAEAAUAAABUAAoAAAAEAAIAAABUAAkAAAAEAAUAAABUAAgAAAAEAAUAAABUAAcAAAAEAAEAAABTAA0AAAACAAQAAABTAAwAAAAEAAQAAABTAAsAAAAEAAUAAABTAAoAAAAEAAQAAABTAAkAAAAEAAQAAABTAAgAAAAEAAQAAABTAAcAAAAEAAEAAABSAA0AAAAGAAQAAABSAAwAAAAEAAMAAABSAAsAAAAEAAQAAABSAAoAAAAEAAUAAABSAAkAAAAEAAMAAABSAAgAAAAEAAQAAABSAAcAAAACAAMAAABRAA0AAAAEAAYAAABRAAwAAAAEAAUAAABRAAsAAAAEAAUAAABRAAoAAAAEAAUAAABRAAkAAAAEAAUAAABRAAgAAAAEAAQAAABRAAcAAAAEAAEAAABQAA0AAAAEAAYAAABQAAwAAAAEAAMAAABQAAsAAAAEAAMAAABQAAoAAAAEAAIAAABQAAkAAAAEAAMAAABQAAgAAAAEAAQAAABQAAcAAAAGAAMAAABPAA0AAAACAAQAAABPAAwAAAAEAAUAAABPAAsAAAAEAAIAAABPAAoAAAAEAAMAAABPAAkAAAAEAAQAAABPAAgAAAAEAAMAAABPAAcAAAAEAAEAAABOAA0AAAAEAAYAAABOAAwAAAAEAAMAAABOAAsAAAAEAAQAAABOAAoAAAAEAAMAAABOAAkAAAAEAAQAAABOAAgAAAAEAAMAAABOAAcAAAAEAAEAAABNAA0AAAACAAQAAABNAAwAAAAEAAIAAABNAAsAAAAEAAUAAABNAAoAAAAEAAUAAABNAAkAAAAEAAQAAABNAAgAAAAEAAUAAABNAAcAAAAEAAEAAABMAA0AAAACAAQAAABMAAwAAAAEAAUAAABMAAsAAAAEAAIAAABMAAoAAAAEAAQAAABMAAkAAAAEAAIAAABMAAgAAAAEAAUAAABMAAcAAAAGAAMAAABLAA0AAAAGAAQAAABLAAwAAAAEAAQAAABLAAsAAAAEAAQAAABLAAoAAAAEAAQAAABLAAkAAAAEAAUAAABLAAgAAAAEAAMAAABLAAcAAAACAAMAAABKAA0AAAACAAQAAABKAAwAAAAEAAIAAABKAAsAAAAEAAUAAABKAAoAAAAEAAQAAABKAAkAAAAEAAIAAABKAAgAAAAEAAUAAABKAAcAAAAGAAMAAABJAA0AAAAEAAYAAABJAAwAAAAEAAUAAABJAAsAAAAEAAMAAABJAAoAAAAEAAMAAABJAAkAAAAEAAIAAABJAAgAAAAEAAQAAABJAAcAAAACAAMAAABIAA0AAAAEAAYAAABIAAwAAAAEAAQAAABIAAsAAAAEAAUAAABIAAoAAAAEAAMAAABIAAkAAAAEAAIAAABIAAgAAAAEAAMAAABIAAcAAAAEAAEAAABHAA0AAAAEAAYAAABHAAwAAAAEAAUAAABHAAsAAAAEAAIAAABHAAoAAAAEAAMAAABHAAkAAAAEAAMAAABHAAgAAAAEAAQAAABHAAcAAAAEAAEAAABGAA0AAAAEAAYAAABGAAwAAAAEAAQAAABGAAsAAAAEAAUAAABGAAoAAAAEAAUAAABGAAkAAAAEAAIAAABGAAgAAAAEAAIAAABGAAcAAAAEAAEAAABFAA0AAAAGAAQAAABFAAwAAAAEAAUAAABFAAsAAAAEAAUAAABFAAoAAAAEAAUAAABFAAkAAAAEAAIAAABFAAgAAAAEAAUAAABFAAcAAAAEAAEAAABEAA0AAAAGAAQAAABEAAwAAAAEAAIAAABEAAsAAAAEAAMAAABEAAoAAAAEAAIAAABEAAkAAAAEAAIAAABEAAgAAAAEAAMAAABEAAcAAAACAAMAAABDAA0AAAAEAAYAAABDAAwAAAAEAAMAAABDAAsAAAAEAAUAAABDAAoAAAAEAAIAAABDAAkAAAAEAAIAAABDAAgAAAAEAAMAAABDAAcAAAAGAAMAAABCAA0AAAACAAQAAABCAAwAAAAEAAUAAABCAAsAAAAEAAUAAABCAAoAAAAEAAMAAABCAAkAAAAEAAMAAABCAAgAAAAEAAUAAABCAAcAAAAGAAMAAABBAA0AAAACAAQAAABBAAwAAAAEAAQAAABBAAsAAAAEAAIAAABBAAoAAAAEAAMAAABBAAkAAAAEAAIAAABBAAgAAAAEAAIAAABBAAcAAAACAAMAAABAAA0AAAAEAAYAAABAAAwAAAAEAAMAAABAAAsAAAAEAAMAAABAAAoAAAAEAAMAAABAAAkAAAAEAAUAAABAAAgAAAAEAAIAAABAAAcAAAACAAMAAAA/AA0AAAACAAQAAAA/AAwAAAAEAAUAAAA/AAsAAAAEAAQAAAA/AAoAAAAEAAMAAAA/AAkAAAAEAAUAAAA/AAgAAAAEAAQAAAA/AAcAAAAEAAEAAAA+AA0AAAAGAAQAAAA+AAwAAAAEAAQAAAA+AAsAAAAEAAQAAAA+AAoAAAAEAAUAAAA+AAkAAAAEAAIAAAA+AAgAAAAEAAIAAAA+AAcAAAAEAAEAAAA9AA0AAAAGAAQAAAA9AAwAAAAEAAQAAAA9AAsAAAAEAAIAAAA9AAoAAAAEAAIAAAA9AAkAAAAEAAIAAAA9AAgAAAAEAAUAAAA9AAcAAAACAAMAAAA8AA0AAAAGAAQAAAA8AAwAAAAEAAQAAAA8AAsAAAAEAAQAAAA8AAoAAAAEAAMAAAA8AAkAAAAEAAIAAAA8AAgAAAAEAAIAAAA8AAcAAAACAAMAAAA7AA0AAAACAAQAAAA7AAwAAAAEAAQAAAA7AAsAAAAEAAUAAAA7AAoAAAAEAAQAAAA7AAkAAAAEAAUAAAA7AAgAAAAEAAUAAAA7AAcAAAACAAMAAAA6AA0AAAACAAQAAAA6AAwAAAAEAAMAAAA6AAsAAAAEAAIAAAA6AAoAAAAEAAQAAAA6AAkAAAAEAAQAAAA6AAgAAAAEAAMAAAA6AAcAAAACAAMAAAA5AA0AAAAGAAQAAAA5AAwAAAAEAAQAAAA5AAsAAAAEAAMAAAA5AAoAAAAEAAQAAAA5AAkAAAAEAAUAAAA5AAgAAAAEAAQAAAA5AAcAAAAEAAEAAAA4AA0AAAAGAAQAAAA4AAwAAAAEAAQAAAA4AAsAAAAEAAUAAAA4AAoAAAAEAAIAAAA4AAkAAAAEAAMAAAA4AAgAAAAEAAMAAAA4AAcAAAAEAAEAAAA3AA0AAAAGAAQAAAA3AAwAAAAEAAMAAAA3AAsAAAAEAAUAAAA3AAoAAAAEAAQAAAA3AAkAAAAEAAQAAAA3AAgAAAAEAAMAAAA3AAcAAAACAAMAAAA2AA0AAAAGAAQAAAA2AAwAAAAEAAUAAAA2AAsAAAAEAAIAAAA2AAoAAAAEAAIAAAA2AAkAAAAEAAUAAAA2AAgAAAAEAAMAAAA2AAcAAAAGAAMAAAA1AA0AAAAEAAYAAAA1AAwAAAAEAAIAAAA1AAsAAAAEAAQAAAA1AAoAAAAEAAUAAAA1AAkAAAAEAAUAAAA1AAgAAAAEAAUAAAA1AAcAAAAEAAEAAAA0AA0AAAACAAQAAAA0AAwAAAAEAAIAAAA0AAsAAAAEAAMAAAA0AAoAAAAEAAQAAAA0AAkAAAAEAAUAAAA0AAgAAAAEAAQAAAA0AAcAAAAGAAMAAAAzAA0AAAAGAAQAAAAzAAwAAAAEAAQAAAAzAAsAAAAEAAIAAAAzAAoAAAAEAAMAAAAzAAkAAAAEAAQAAAAzAAgAAAAEAAMAAAAzAAcAAAAGAAMAAAAyAA0AAAACAAQAAAAyAAwAAAAEAAIAAAAyAAsAAAAEAAUAAAAyAAoAAAAEAAQAAAAyAAkAAAAEAAMAAAAyAAgAAAAEAAMAAAAyAAcAAAAEAAEAAAAxAA0AAAAGAAQAAAAxAAwAAAAEAAMAAAAxAAsAAAAEAAQAAAAxAAoAAAAEAAUAAAAxAAkAAAAEAAMAAAAxAAgAAAAEAAIAAAAxAAcAAAAEAAEAAAAwAA0AAAACAAQAAAAwAAwAAAAEAAUAAAAwAAsAAAAEAAQAAAAwAAoAAAAEAAMAAAAwAAkAAAAEAAIAAAAwAAgAAAAEAAMAAAAwAAcAAAAEAAEAAAAvAA0AAAAGAAQAAAAvAAwAAAAEAAUAAAAvAAsAAAAEAAMAAAAvAAoAAAAEAAQAAAAvAAkAAAAEAAUAAAAvAAgAAAAEAAQAAAAvAAcAAAACAAMAAAAuAA0AAAACAAQAAAAuAAwAAAAEAAIAAAAuAAsAAAAEAAUAAAAuAAoAAAAEAAMAAAAuAAkAAAAEAAIAAAAuAAgAAAAEAAIAAAAuAAcAAAAGAAMAAAAtAA0AAAACAAQAAAAtAAwAAAAEAAMAAAAtAAsAAAAEAAMAAAAtAAoAAAAEAAQAAAAtAAkAAAAEAAMAAAAtAAgAAAAEAAIAAAAtAAcAAAACAAMAAAAsAA0AAAAGAAQAAAAsAAwAAAAEAAQAAAAsAAsAAAAEAAUAAAAsAAoAAAAEAAQAAAAsAAkAAAAEAAMAAAAsAAgAAAAEAAQAAAAsAAcAAAAEAAEAAAArAA0AAAAEAAYAAAArAAwAAAAEAAQAAAArAAsAAAAEAAMAAAArAAoAAAAEAAIAAAArAAkAAAAEAAIAAAArAAgAAAAEAAUAAAArAAcAAAACAAMAAAAqAA0AAAAEAAYAAAAqAAwAAAAEAAIAAAAqAAsAAAAEAAUAAAAqAAoAAAAEAAMAAAAqAAkAAAAEAAUAAAAqAAgAAAAEAAIAAAAqAAcAAAAGAAMAAAApAA0AAAACAAQAAAApAAwAAAAEAAUAAAApAAsAAAAEAAMAAAApAAoAAAAEAAQAAAApAAkAAAAEAAUAAAApAAgAAAAEAAIAAAApAAcAAAACAAMAAAAoAA0AAAAEAAYAAAAoAAwAAAAEAAUAAAAoAAsAAAAEAAQAAAAoAAoAAAAEAAMAAAAoAAkAAAAEAAUAAAAoAAgAAAAEAAQAAAAoAAcAAAACAAMAAAAnAA0AAAAEAAYAAAAnAAwAAAAEAAIAAAAnAAsAAAAEAAUAAAAnAAoAAAAEAAIAAAAnAAkAAAAEAAMAAAAnAAgAAAAEAAIAAAAnAAcAAAAGAAMAAAAmAA0AAAAGAAQAAAAmAAwAAAAEAAMAAAAmAAsAAAAEAAQAAAAmAAoAAAAEAAUAAAAmAAkAAAAEAAMAAAAmAAgAAAAEAAUAAAAmAAcAAAACAAMAAAAlAA0AAAACAAQAAAAlAAwAAAAEAAQAAAAlAAsAAAAEAAMAAAAlAAoAAAAEAAQAAAAlAAkAAAAEAAIAAAAlAAgAAAAEAAQAAAAlAAcAAAACAAMAAAAkAA0AAAAEAAYAAAAkAAwAAAAEAAIAAAAkAAsAAAAEAAMAAAAkAAoAAAAEAAIAAAAkAAkAAAAEAAMAAAAkAAgAAAAEAAMAAAAkAAcAAAACAAMAAAAjAA0AAAAGAAQAAAAjAAwAAAAEAAIAAAAjAAsAAAAEAAMAAAAjAAoAAAAEAAUAAAAjAAkAAAAEAAUAAAAjAAgAAAAEAAMAAAAjAAcAAAACAAMAAAAiAA0AAAAGAAQAAAAiAAwAAAAEAAQAAAAiAAsAAAAEAAMAAAAiAAoAAAAEAAQAAAAiAAkAAAAEAAQAAAAiAAgAAAAEAAIAAAAiAAcAAAAGAAMAAAAhAA0AAAAGAAQAAAAhAAwAAAAEAAUAAAAhAAsAAAAEAAQAAAAhAAoAAAAEAAQAAAAhAAkAAAAEAAIAAAAhAAgAAAAEAAQAAAAhAAcAAAACAAMAAAAgAA0AAAACAAQAAAAgAAwAAAAEAAUAAAAgAAsAAAAEAAIAAAAgAAoAAAAEAAIAAAAgAAkAAAAEAAIAAAAgAAgAAAAEAAMAAAAgAAcAAAACAAMAAAAfAA0AAAACAAQAAAAfAAwAAAAEAAQAAAAfAAsAAAAEAAIAAAAfAAoAAAAEAAIAAAAfAAkAAAAEAAUAAAAfAAgAAAAEAAIAAAAfAAcAAAAEAAEAAAAeAA0AAAAGAAQAAAAeAAwAAAAEAAIAAAAeAAsAAAAEAAMAAAAeAAoAAAAEAAMAAAAeAAkAAAAEAAUAAAAeAAgAAAAEAAIAAAAeAAcAAAACAAMAAAAdAA0AAAAEAAYAAAAdAAwAAAAEAAQAAAAdAAsAAAAEAAMAAAAdAAoAAAAEAAIAAAAdAAkAAAAEAAMAAAAdAAgAAAAEAAUAAAAdAAcAAAACAAMAAAAcAA0AAAACAAQAAAAcAAwAAAAEAAUAAAAcAAsAAAAEAAIAAAAcAAoAAAAEAAIAAAAcAAkAAAAEAAIAAAAcAAgAAAAEAAUAAAAcAAcAAAAGAAMAAAAbAA0AAAACAAQAAAAbAAwAAAAEAAQAAAAbAAsAAAAEAAQAAAAbAAoAAAAEAAIAAAAbAAkAAAAEAAQAAAAbAAgAAAAEAAQAAAAbAAcAAAAEAAEAAAAaAA0AAAACAAQAAAAaAAwAAAAEAAQAAAAaAAsAAAAEAAIAAAAaAAoAAAAEAAIAAAAaAAkAAAAEAAQAAAAaAAgAAAAEAAMAAAAaAAcAAAAGAAMAAAAZAA0AAAAEAAYAAAAZAAwAAAAEAAUAAAAZAAsAAAAEAAIAAAAZAAoAAAAEAAQAAAAZAAkAAAAEAAQAAAAZAAgAAAAEAAIAAAAZAAcAAAAEAAEAAAAYAA0AAAAEAAYAAAAYAAwAAAAEAAIAAAAYAAsAAAAEAAUAAAAYAAoAAAAEAAUAAAAYAAkAAAAEAAMAAAAYAAgAAAAEAAIAAAAYAAcAAAACAAMAAAAXAA0AAAAEAAYAAAAXAAwAAAAEAAQAAAAXAAsAAAAEAAQAAAAXAAoAAAAEAAMAAAAXAAkAAAAEAAUAAAAXAAgAAAAEAAMAAAAXAAcAAAAEAAEAAAAWAA0AAAACAAQAAAAWAAwAAAAEAAIAAAAWAAsAAAAEAAQAAAAWAAoAAAAEAAQAAAAWAAkAAAAEAAIAAAAWAAgAAAAEAAMAAAAWAAcAAAAEAAEAAAAVAA0AAAAGAAQAAAAVAAwAAAAEAAIAAAAVAAsAAAAEAAUAAAAVAAoAAAAEAAMAAAAVAAkAAAAEAAQAAAAVAAgAAAAEAAQAAAAVAAcAAAACAAMAAAAUAA0AAAAEAAYAAAAUAAwAAAAEAAQAAAAUAAsAAAAEAAUAAAAUAAoAAAAEAAQAAAAUAAkAAAAEAAQAAAAUAAgAAAAEAAMAAAAUAAcAAAAEAAEAAAATAA0AAAAGAAQAAAATAAwAAAAEAAQAAAATAAsAAAAEAAQAAAATAAoAAAAEAAQAAAATAAkAAAAEAAQAAAATAAgAAAAEAAMAAAATAAcAAAAEAAEAAAASAA0AAAAGAAQAAAASAAwAAAAEAAMAAAASAAsAAAAEAAQAAAASAAoAAAAEAAQAAAASAAkAAAAEAAIAAAASAAgAAAAEAAUAAAASAAcAAAAGAAMAAAARAA0AAAACAAQAAAARAAwAAAAEAAMAAAARAAsAAAAEAAUAAAARAAoAAAAEAAUAAAARAAkAAAAEAAUAAAARAAgAAAAEAAMAAAARAAcAAAAEAAEAAAAQAA0AAAAGAAQAAAAQAAwAAAAEAAQAAAAQAAsAAAAEAAMAAAAQAAoAAAAEAAQAAAAQAAkAAAAEAAUAAAAQAAgAAAAEAAUAAAAQAAcAAAACAAMAAAAPAA0AAAAGAAQAAAAPAAwAAAAEAAIAAAAPAAsAAAAEAAMAAAAPAAoAAAAEAAQAAAAPAAkAAAAEAAQAAAAPAAgAAAAEAAMAAAAPAAcAAAACAAMAAAAOAA0AAAAEAAYAAAAOAAwAAAAEAAUAAAAOAAsAAAAEAAUAAAAOAAoAAAAEAAUAAAAOAAkAAAAEAAMAAAAOAAgAAAAEAAMAAAAOAAcAAAAGAAMAAAANAA0AAAACAAQAAAANAAwAAAAEAAUAAAANAAsAAAAEAAQAAAANAAoAAAAEAAIAAAANAAkAAAAEAAMAAAANAAgAAAAEAAQAAAANAAcAAAACAAMAAAAMAA0AAAAEAAYAAAAMAAwAAAAEAAQAAAAMAAsAAAAEAAUAAAAMAAoAAAAEAAMAAAAMAAkAAAAEAAUAAAAMAAgAAAAEAAQAAAAMAAcAAAAGAAMAAAALAA0AAAAGAAQAAAALAAwAAAAEAAMAAAALAAsAAAAEAAIAAAALAAoAAAAEAAMAAAALAAkAAAAEAAMAAAALAAgAAAAEAAQAAAALAAcAAAAEAAEAAAAKAA0AAAACAAQAAAAKAAwAAAAEAAQAAAAKAAsAAAAEAAIAAAAKAAoAAAAEAAIAAAAKAAkAAAAEAAIAAAAKAAgAAAAEAAUAAAAKAAcAAAAGAAMAAAAJAA0AAAAEAAYAAAAJAAwAAAAEAAIAAAAJAAsAAAAEAAUAAAAJAAoAAAAEAAIAAAAJAAkAAAAEAAUAAAAJAAgAAAAEAAQAAAAJAAcAAAAEAAEAAAAIAA0AAAAEAAYAAAAIAAwAAAAEAAMAAAAIAAsAAAAEAAIAAAAIAAoAAAAEAAIAAAAIAAkAAAAEAAMAAAAIAAgAAAAEAAUAAAAIAAcAAAACAAMAAAAHAA0AAAAGAAQAAAAHAAwAAAAEAAUAAAAHAAsAAAAEAAIAAAAHAAoAAAAEAAMAAAAHAAkAAAAEAAIAAAAHAAgAAAAEAAIAAAAHAAcAAAACAAMAAAAGAA0AAAAGAAQAAAAGAAwAAAAEAAQAAAAGAAsAAAAEAAQAAAAGAAoAAAAEAAQAAAAGAAkAAAAEAAMAAAAGAAgAAAAEAAUAAAAGAAcAAAACAAMAAAAFAA0AAAAEAAYAAAAFAAwAAAAEAAIAAAAFAAsAAAAEAAQAAAAFAAoAAAAEAAMAAAAFAAkAAAAEAAIAAAAFAAgAAAAEAAIAAAAFAAcAAAACAAMAAAAEAA0AAAACAAQAAAAEAAwAAAAEAAQAAAAEAAsAAAAEAAIAAAAEAAoAAAAEAAMAAAAEAAkAAAAEAAUAAAAEAAgAAAAEAAMAAAAEAAcAAAAGAAMAAAADAA0AAAAGAAQAAAADAAwAAAAEAAQAAAADAAsAAAAEAAIAAAADAAoAAAAEAAMAAAADAAkAAAAEAAIAAAADAAgAAAAEAAMAAAADAAcAAAAGAAMAAAACAA0AAAAGAAQAAAACAAwAAAAEAAQAAAACAAsAAAAEAAMAAAACAAoAAAAEAAUAAAACAAkAAAAEAAQAAAACAAgAAAAEAAQAAAACAAcAAAAEAAEAAAABAA0AAAAEAAYAAAABAAwAAAAEAAIAAAABAAsAAAAEAAMAAAABAAoAAAAEAAUAAAABAAkAAAAEAAIAAAABAAgAAAAEAAUAAAABAAcAAAAGAAMAAAAAAA0AAAABAAQAAAAAAAwAAAADAAIAAAAAAAsAAAADAAUAAAAAAAoAAAADAAUAAAAAAAkAAAADAAUAAAAAAAgAAAADAAIAAAAAAAcAAAABAAMAAAA=")

[node name="player" parent="." unique_id=372595501 instance=ExtResource("1_vn7o3")]
position = Vector2(41, 71)

[node name="ParallaxBackground" type="ParallaxBackground" parent="." unique_id=999195474]
script = ExtResource("3_l53as")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground" unique_id=1282683465]
position = Vector2(-1, 0)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer" unique_id=2131614757]
texture_repeat = 2
texture = ExtResource("3_gwceb")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground" unique_id=1803576694]
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2" unique_id=1198927436]
texture_repeat = 2
texture = ExtResource("4_l53as")
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground" unique_id=1322935295]
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3" unique_id=999132726]
texture_repeat = 2
texture = ExtResource("5_3sk1a")
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground" unique_id=1418718546]
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4" unique_id=405406337]
texture_repeat = 2
texture = ExtResource("6_08mmt")
centered = false

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground" unique_id=206557056]
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer5" unique_id=1558269588]
texture_repeat = 2
texture = ExtResource("7_5ot28")
centered = false

[node name="Camera2D2" type="Camera2D" parent="." unique_id=608066633]
position = Vector2(145, 105)
